--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -145,10 +145,11 @@ header {
     text-decoration: none;
     color: white;
     border-radius: 16px;
-    padding: 8px 8px 8px 8px;
+    padding: 10px;
     transition: transform 0.2s, background 0.3s, border-color 0.3s;
     aspect-ratio: 1 / 1;
     position: relative;
+    overflow: hidden;
 }
 
 .link-btn:hover {
@@ -161,11 +162,12 @@ header {
 
 .link-thumb {
     width: 100%;
-    height: 100%;
-    border-radius: 20px;
+    flex: 1;
+    border-radius: 12px;
     overflow: hidden;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     border: none;
+    display: flex;
     box-shadow: 0 4px 6px rgba(0,0,0,0.2);
 }
 
@@ -190,6 +192,7 @@ header {
     display: flex;
     gap: 25px;
     font-size: 1.5rem;
+    display: -webkit-box;
 }
 
 .social-footer a {
