style: Modificação de cor no icone do card da tela de contatos

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -323,7 +323,7 @@ header {
 
 /* O quadrado rosa do ícone */
 .card-icon-container {
-    background: linear-gradient(135deg, #ff4b7d, #e93a63);
+    background: linear-gradient(135deg, #ff7b00, #ffad50);
     width: 70px;
     height: 70px;
     border-radius: 18px;
